--- a/index.html
+++ b/index.html
@@ -5,13 +5,10 @@
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 	</head>
 	<body>
-		<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
+		<nav class="navbar navbar-light bg-light">
+			<div class="container-fluid">
+			  <span class="navbar-brand mb-0 h1">Henlo</span>
+			</div>
 		</nav>
 		<div class="container">
     		<div class="blurb">
@@ -19,10 +16,7 @@
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
-    		<ul>
-        		<li>email</a></li>
-        		<li>????</li>
-			</ul>
+    		
 		</footer>
 	</body>
 </html>
