--- a/default.html
+++ b/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>????</title>
+		<title>{{ page.title }}</title>
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 	</head>
 	<body>
@@ -11,9 +11,9 @@
 			</div>
 		</nav>
 		<div class="container">
-    		<div class="blurb">
-        		<h1>i'm... attempting</h1>
-    		</div><!-- /.blurb -->
+    			
+			{{ content }}
+			
 		</div><!-- /.container -->
 		<footer>
     		
