generating json file from js hehe

--- a/index.html
+++ b/index.html
@@ -2,5 +2,5 @@
 layout: default
 title: Home
 ---
-<h1>{{ "Hello World!" | downcase }}</h1>
+<h1>{{ "it's a seulrene world we just live in it" | downcase }}</h1>
 {% include item.html %}
