the creating new moment form

--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@ title: it's a seulrene world. we just live in it
 <!-- Jumbotron -->
 <div class="p-5 text-center">
   <h1 class="mb-3">{{page.title}}</h1>
-  {% include modal.html %}
 </div>
 <!-- Jumbotron -->
-<div class="container-fluid">
+<div class="container-lg">
   {% include list.html %}
 </div>
 
