--- a/new.html
+++ b/new.html
@@ -8,6 +8,11 @@ title: generate new moment
 <div class="container form-width">
   <form id="newMomentForm" onsubmit="return false">
     <div class="form-outline mb-4">
+        <input type="text" class="form-control" id="momentDate" rows="4"></textarea>
+        <label class="form-label" for="momentDate">Date</label>
+      </div>
+    
+    <div class="form-outline mb-4">
         <textarea class="form-control" id="momentText" rows="4"></textarea>
         <label class="form-label" for="momentText">Text</label>
       </div>
@@ -17,6 +22,19 @@ title: generate new moment
       <input type="url" id="videoUrl" class="form-control" />
       <label class="form-label" for="videoUrl">Video URL</label>
     </div>
+
+    <!-- Default checkbox -->
+        <div class="form-check mb-4">
+        <input
+            class="form-check-input"
+            type="checkbox"
+            value=""
+            id="urlHasStart"
+        />
+        <label class="form-check-label" for="flexCheckDefault">
+            URL has start time
+        </label>
+        </div>
   
     <!-- timestamp -->
     <div id="timestamp" class="form-label">
@@ -31,7 +49,9 @@ title: generate new moment
   
     <!-- Submit button -->
     <button type="submit" onclick="openModalWithCode()" 
-    class="btn btn-link btn-block btn-lg">
+    class="btn btn-link btn-block btn-lg"
+    data-mdb-toggle="modal"
+    data-mdb-target="#modalNew">
         generate code
     </button>
   </form>
