--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
                 align-items: center;
                 justify-content: center;
                 height: 100vh;
+                margin: 0px;
             }
 
             #canvas {
@@ -22,7 +23,7 @@
         <canvas id="canvas"></canvas>
         <script src="index.js"></script>
         <script>
-            var engine = new Engine({"args":[],"canvasResizePolicy":1,"executable":"index","experimentalVK":false,"fileSizes":{"index.pck":1649040,"index.wasm":17862218},"focusCanvas":true,"gdnativeLibs":[],"serviceWorker":"index.service.worker.js"});
+            var engine = new Engine({"args":[],"canvasResizePolicy":1,"executable":"index","experimentalVK":false,"fileSizes":{"index.pck":1646096,"index.wasm":17862218},"focusCanvas":true,"gdnativeLibs":[],"serviceWorker":"index.service.worker.js"});
             var lastPercent = 0;
             
             function printProgress(current, total) {
